compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__unqualified_inlining_external_functions_from_another_module.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 84
expression: "import atom.{make}\npub fn main() {\n  make(\"ok\")\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
import atom.{make}
pub fn main() {
  make("ok")
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> atom:atom_().
main() ->
    erlang:binary_to_atom(<<"ok"/utf8>>).
